Pass game data to the View